--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello world from saad</h1>
+    <h1>Hello world from saad.</h1>
 </body>
 </html>
